--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "seeds": "node ./bin/seeds",
     "start-dev": "nodemon ./bin/www",
     "start": "node ./bin/www"
   },
